# pl_vision

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  autostart.sh  hand_eye_calib_chessboard_result.yaml  hand_eye_calib_final_result.yaml  readme.md
calibration/: calibrate_camera.cpp  calibrate_handeye.cpp  capture.cpp
configs/: ascento.yaml  calibration.yaml  camera.yaml  sentry.yaml  standard3.yaml  standard4.yaml  uav.yaml
io/: CMakeLists.txt  camera.cpp  camera.hpp  cboard.cpp  cboard.hpp  command.hpp  fd_cboard.cpp  fd_cboard.hpp  socketcan.hpp
io/dahua/: StreamRetrieve.h  dahua.cpp  dahua.hpp  streamRetrieve.cpp
io/gimbal/: gimbal.cpp  gimbal.hpp
io/hikrobot/: hikrobot.cpp  hikrobot.hpp
io/mindvision/: mindvision.hpp
src/: auto_aim_debug_mpc.cpp  mt_auto_aim_debug.cpp  mt_standard.cpp  standard.cpp  standard_mpc.cpp  standard_mpc_fd.cpp  uav.cpp  uav_debug.cpp
tasks/auto_aim/: CMakeLists.txt  aimer.cpp  aimer.hpp  armor.hpp  classifier.cpp  classifier.hpp  detector.cpp  detector.hpp  shooter.cpp  shooter.hpp  solver.cpp  solver.hpp  target.cpp  target.hpp  tracker.cpp  tracker.hpp  voter.hpp  yolo.cpp  yolo.hpp
tasks/auto_aim/multithread/: commandgener.cpp  commandgener.hpp  mt_detector.cpp  mt_detector.hpp
tasks/auto_aim/planner/: planner.cpp  planner.hpp
tasks/auto_aim/planner/tinympc/: CMakeLists.txt  tiny_api.cpp  tiny_api.hpp
tasks/auto_aim/yolos/: yolov5.cpp
tasks/auto_buff/: buff_aimer.cpp  buff_detector.cpp
tasks/omniperception/: decider.cpp  decider.hpp  detection.hpp  perceptron.cpp  perceptron.hpp
tests/: auto_aim_test.cpp  auto_buff_test.cpp  camera_detect_test.cpp  camera_test.cpp  cboard_test.cpp  minimum_vision_system.cpp  planner_test.cpp  planner_test_offline.cpp  usbcamera_test.cpp
tools/: exiter.cpp  exiter.hpp  extended_kalman_filter.cpp  img_tools.cpp  logger.cpp  logger.hpp  math_tools.cpp  math_tools.hpp  plotter.cpp  plotter.hpp  ransac_sine_fitter.cpp  ransac_sine_fitter.hpp  recorder.cpp  recorder.hpp  thread_pool.hpp  thread_safe_queue.hpp  trajectory.cpp  trajectory.hpp  yaml.hpp
